Demo structure of listing

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,8 +1,8 @@
 @import '../vendor/bootstrap-sass/assets/stylesheets/bootstrap';
 
-@import "variables";
-@import "typography";
+@import 'variables';
+@import 'typography';
 
-@import "navbar";
-@import "layout"; 
-@import "screen";
+@import 'navbar';
+@import 'layout'; 
+@import 'screen';
