Remove unnecessary css

--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,6 +1,12 @@
+// Typography
 body {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
 }
+
+// Variables
+$bs-red: #D32F2F;
+$bs-black: #151515;
+$bs-bg: #F0F0F0;
