--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,8 +1,5 @@
 @import '../vendor/bootstrap-sass/assets/stylesheets/bootstrap';
 
-@import 'variables';
-@import 'typography';
-
-@import 'navbar';
+@import 'utils';
 @import 'layout'; 
 @import 'screen';
