--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,5 +1,6 @@
 body {
 	background: $bs-bg;
+	a { text-decoration: none; }
 }
 
 header {
@@ -17,10 +18,6 @@ header {
 
 #content {
 	@extend .container;
-
-	a {
-		text-decoration: none;
-	}
 
 	.nodes {		
     	@include make-row();
@@ -50,7 +47,7 @@ header {
   				transition: all 0.2s ease-in-out;
 
   				&:hover{
-				box-shadow: 0 6px 6px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+					box-shadow: 0 6px 6px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   				}
 
 				p {
