--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -10,3 +10,26 @@ body {
 $bs-red: #D32F2F;
 $bs-black: #151515;
 $bs-bg: #F0F0F0;
+
+// Extendable Classes
+.parrent {
+	@include make-row();
+    margin-top: 10px;
+}
+
+.child { 
+	margin: 15px 0;
+}
+
+.grandchild {
+	text-align: center;
+
+	min-height: 200px;
+				
+	background: white;
+
+	border-radius: 1px;
+	border-bottom: 2px solid $bs-red;
+				
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
