--- a/src/styles/_screen.scss
+++ b/src/styles/_screen.scss
@@ -34,13 +34,13 @@
 				.route-details {
 					min-height: 150px;
 					h3, h4 { margin: 5px auto; }
-					h3 { font-size: 1.8rem; padding-top: 10px;}
-					h4 { font-size: 1.6rem; }
+					h3 { font-size: 2.2rem; padding: 15px 0 5px 0;}
+					h4 { font-size: 2rem; }
 					p {
 						padding: 5px 20px;
-						font-size: .8rem;
+						font-size: 1rem;
 					}
-					.route-next { font-size: 1rem; }
+					.route-next { font-size: 1.2rem; }
 				}
 			}
 		}
