--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -23,7 +23,27 @@ header {
 	}
 }
 
+footer {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 36px;
+	background: $bs-black;
+	color: $bs-bg;
+
+	h4 {
+		margin: auto;
+		padding: 0;
+	}
+}
+
 #content {
+	min-height: 80vh;
+
 	a { text-decoration: none; }
 
 	.loading {
@@ -35,8 +55,7 @@ header {
 		}
 	}
 
-
-	.nodes {	
+	.nodes {
     @extend .parrent;
 
 		.node {
@@ -135,7 +154,7 @@ header {
 						color: $bs-black;
 					}
 	    	}
-	  } 
+	  }
 	}
 
 }
