major update, about page - css - partials

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,5 +1,13 @@
 body {
 	background: $bs-bg;
+
+	a {
+		&:hover, &:active, &:focus {
+			color: white;
+			text-decoration: none;
+			text-transform: none;
+		}
+	}
 }
 
 header {
@@ -19,7 +27,7 @@ header {
 		font-weight: 600;
 		font-size: 3rem;
 		margin: 0 auto;
-		padding: 30px 0;
+		padding: 25px 0;
 	}
 }
 
@@ -31,7 +39,7 @@ footer {
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	height: 36px;
+	height: 40px;
 	background: $bs-black;
 	color: $bs-bg;
 
@@ -39,13 +47,37 @@ footer {
 		margin: auto;
 		padding: 0;
 	}
+
+	a {
+		color: $bs-bg;
+		&:hover {
+			color: $bs-red;
+		}
+	}
 }
 
 #content {
-	min-height: 80vh;
+	min-height: 83vh;
 
 	a { text-decoration: none; }
 
+	// Page Title
+	.page-title {
+		@extend .container-fluid;
+
+		background: $bs-black;
+		text-align: center;
+
+		h2 {
+			color: white;
+			font-weight: 600;
+			font-size: 2rem;
+			margin: 0 auto;
+			padding: 20px 0;
+		}
+	}
+
+	// Spinner
 	.loading {
 		@extend .parrent;
 		padding: 50px;
@@ -55,6 +87,7 @@ footer {
 		}
 	}
 
+	// List
 	.nodes {
     @extend .parrent;
 
@@ -88,34 +121,7 @@ footer {
 		}
 	}
 
-	.location-name {
-		@extend .container-fluid;
-
-		background: $bs-black;
-		text-align: center;
-
-		button {
-			@extend .btn;
-			background: transparent;
-			border: 1px solid #424242;
-			color: white;
-			margin-top: 18px;
-
-			&:hover{
-				color: white;
-				background: #424242;
-			}
-		}
-
-		h2 {
-			color: white;
-			font-weight: 600;
-			font-size: 2rem;
-			margin: 0 auto;
-			padding: 20px 0;
-		}
-	}
-
+	// Routes
 	.routes {
 		@extend .parrent;
 
@@ -148,6 +154,15 @@ footer {
 						color: #525252;
 					}
 
+					ul {
+						list-style: none;
+						padding: 0;
+
+						li {
+							margin: 1px auto;
+						}
+					}
+
 					.route-next {
 						font-weight: 600;
 						font-size: 1.6rem;
@@ -155,6 +170,43 @@ footer {
 					}
 	    	}
 	  }
+	}
+
+	// About
+	.about {
+		@extend .container;
+
+		.about-content {
+			box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+			height: auto;
+			background: white;
+			text-align: center;
+			margin: 20px auto;
+			padding: 10px 25px;
+			font-size: 16px;
+			line-height: 1.6;
+
+			a {
+				color: $bs-red;
+				&:hover {
+					color: darken($bs-red, 10%);
+				}
+			}
+		}
+	}
+
+	// Back Button
+	.backButton {
+		@extend .btn;
+		background: transparent;
+		border: 1px solid #424242;
+		color: white;
+		margin-top: 18px;
+
+		&:hover{
+			color: white;
+			background: #424242;
+		}
 	}
 
 }
