--- a/src/styles/_screen.scss
+++ b/src/styles/_screen.scss
@@ -43,6 +43,15 @@
 	#content {
 		min-height: 90vh;
 
+		.page-title {
+			h2 { font-size: 1.6rem; }
+		}
+
+		.backButton {
+			margin-top: 17px;
+			font-size: 1.1rem;
+		}
+
 		.nodes {
 			.node {
 				.node-details {
@@ -56,14 +65,6 @@
 			}
 		}
 
-		.location-name {
-			h2 { font-size: 1.6rem; }
-			button {
-				margin-top: 17px;
-				font-size: 10px;
-			}
-		}
-
 		.routes {
 			.route {
 				margin: 15px 0;
@@ -74,6 +75,9 @@
 					h4 { font-size: 1.9rem; }
 					p {
 						padding: 5px 20px;
+						font-size: 1rem;
+					}
+					ul > li {
 						font-size: 1rem;
 					}
 					.route-next { font-size: 1.2rem; }
