--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -93,6 +93,7 @@ footer {
 
 		.node {
 			@extend .child;
+			@extend .col-centered;
 			@include make-xs-column(6);
 			@include make-sm-column(4);
 			@include make-md-column(3);
@@ -134,7 +135,7 @@ footer {
 	    	.route-details{
 					@extend .grandchild;
 
-					min-height: 265px;
+					min-height: 280px;
 
 					h3 {
 						font-weight: 600;
