--- a/app/components/RouteList/RouteItem/style.css
+++ b/app/components/RouteList/RouteItem/style.css
@@ -20,6 +20,15 @@
     padding: 15px;
   }
 
+  & ul {
+    list-style: none;
+    padding: 0;
+
+    & li {
+      margin: 1px auto;
+    }
+  }
+
   & p {
     padding: 5px 45px;
     color: #525252;
@@ -27,12 +36,35 @@
     font-size: 1.6rem;
   }
 
-  & ul {
-    list-style: none;
-    padding: 0;
+  @media (width <= 320px) {
+    min-height: 200px;
 
-    & li {
-      margin: 1px auto;
+    & h3 {
+      font-size: 2rem;
+    }
+
+    & h4 {
+      font-size: 1.6rem;
+    }
+
+    & ul {
+      font-size: 1.1rem;
+    }
+  }
+
+  @media (width < 768px) {
+    min-height: 200px;
+
+    & h3 {
+      font-size: 2.4rem;
+    }
+
+    & h4 {
+      font-size: 1.8rem;
+    }
+
+    & ul {
+      font-size: 1.2rem;
     }
   }
 
